# qtdatavis3d

./: .cmake.conf  .gitattributes  .gitignore  .qmake.conf  CMakeLists.txt  README  conanfile.py  dependencies.yaml  header.GPL  licenseRule.json  qtdatavis3d.pro  qtdatavisualization.pro  sync.profile
examples/: examples.pri  (+2 more)
examples/datavisualization/: CMakeLists.txt  datavisualization.pro  examples.pri
examples/datavisualization/audiolevels/: CMakeLists.txt  audiolevels.cpp  audiolevels.h  audiolevels.pro  audiolevelsiodevice.cpp  audiolevelsiodevice.h  main.cpp
examples/datavisualization/bars/: CMakeLists.txt  bars.pro  graphmodifier.cpp  graphmodifier.h  main.cpp
examples/datavisualization/custominput/: CMakeLists.txt  custominput.pro  custominputhandler.cpp  custominputhandler.h  main.cpp  scatterdatamodifier.cpp  scatterdatamodifier.h
examples/datavisualization/customitems/: CMakeLists.txt  customitemgraph.cpp  customitemgraph.h  customitems.pro  customitems.qrc  main.cpp
examples/datavisualization/customproxy/: CMakeLists.txt  customproxy.pro  main.cpp  rainfallgraph.cpp  rainfallgraph.h  variantbardatamapping.cpp  variantbardatamapping.h  variantbardataproxy.cpp  variantbardataproxy.h  variantdataset.cpp  variantdataset.h
examples/datavisualization/draggableaxes/: CMakeLists.txt  axesinputhandler.cpp  axesinputhandler.h  data.cpp  data.h  draggableaxes.pro  main.cpp
examples/datavisualization/graphgallery/: CMakeLists.txt  axesinputhandler.cpp  axesinputhandler.h  bargraph.cpp  bargraph.h  custominputhandler.cpp  custominputhandler.h  graphgallery.pro  graphmodifier.cpp  graphmodifier.h  highlightseries.cpp  highlightseries.h  main.cpp  rainfalldata.cpp  rainfalldata.h  scatterdatamodifier.cpp  scatterdatamodifier.h  scattergraph.cpp  scattergraph.h  surfacegraph.cpp  surfacegraph.h  surfacegraphmodifier.cpp  surfacegraphmodifier.h  topographicseries.cpp  topographicseries.h  variantbardatamapping.cpp  variantbardatamapping.h  variantbardataproxy.cpp  variantbardataproxy.h  variantdataset.cpp  variantdataset.h
examples/datavisualization/itemmodel/: CMakeLists.txt  itemmodel.pro  main.cpp
examples/datavisualization/qml3doscilloscope/: CMakeLists.txt  datasource.cpp  datasource.h  main.cpp  qml3doscilloscope.pro
examples/datavisualization/qmlaxisdrag/: CMakeLists.txt  main.cpp  qmlaxisdrag.qrc
examples/datavisualization/qmlaxisformatter/: CMakeLists.txt  customformatter.cpp  customformatter.h  main.cpp  qmlaxisformatter.qrc
examples/datavisualization/qmlaxishandling/: CMakeLists.txt  customformatter.cpp  customformatter.h  main.cpp  qmldir
examples/datavisualization/qmlbars/: CMakeLists.txt  main.cpp  qmlbars.pro
examples/datavisualization/qmlcustominput/: CMakeLists.txt  main.cpp  qmlcustominput.pro  qmlcustominput.qrc
examples/datavisualization/qmllegend/: CMakeLists.txt  main.cpp  qmllegend.desktop
examples/datavisualization/qmlmultigraph/: CMakeLists.txt  main.cpp  qmlmultigraph.pro  qmlmultigraph.qrc
examples/datavisualization/qmloscilloscope/: CMakeLists.txt  datasource.cpp  datasource.h  main.cpp  qmloscilloscope.desktop  qmloscilloscope.pro
examples/datavisualization/qmlscatter/: CMakeLists.txt  main.cpp  qmlscatter.pro
examples/datavisualization/qmlspectrogram/: CMakeLists.txt  main.cpp  qmlspectrogram.qrc
examples/datavisualization/qmlsurface/: CMakeLists.txt  main.cpp  qmlsurface.desktop  qmlsurface.pro
examples/datavisualization/qmlsurfacegallery/: CMakeLists.txt  datasource.cpp  datasource.h  main.cpp  qmlsurfacegallery.pro  qmlsurfacegallery.qrc
examples/datavisualization/qmlsurfacelayers/: CMakeLists.txt  main.cpp  qmlsurfacelayers.desktop  qmlsurfacelayers.pro
examples/datavisualization/rotations/: CMakeLists.txt  main.cpp  rotations.pro  scatterdatamodifier.cpp  scatterdatamodifier.h
examples/datavisualization/scatter/: CMakeLists.txt  main.cpp  scatter.pro  scatterdatamodifier.cpp  scatterdatamodifier.h
examples/datavisualization/surface/: CMakeLists.txt  main.cpp  surface.pro  surfacegraph.cpp  surfacegraph.h
examples/datavisualization/texturesurface/: CMakeLists.txt  custominputhandler.cpp  custominputhandler.h  highlightseries.cpp  highlightseries.h  main.cpp  surfacegraph.cpp  surfacegraph.h  texturesurface.pro  topographicseries.cpp  topographicseries.h
examples/datavisualization/volumetric/: CMakeLists.txt  main.cpp  volumetric.cpp  volumetric.h  volumetric.pro
tests/auto/: CMakeLists.txt  auto.pro
tests/auto/cpptest/: CMakeLists.txt  cpptest.pro
tests/auto/cpptest/common/: cpptestutil.h
tests/auto/cpptest/q3daxis-category/: CMakeLists.txt  tst_axis.cpp
tests/auto/cpptest/q3daxis-logvalue/: CMakeLists.txt  tst_axis.cpp
tests/auto/cpptest/q3daxis-value/: CMakeLists.txt  tst_axis.cpp
tests/auto/cpptest/q3dbars/: CMakeLists.txt  tst_bars.cpp
tests/auto/cpptest/q3dbars-modelproxy/: CMakeLists.txt  tst_proxy.cpp
tests/auto/cpptest/q3dbars-proxy/: CMakeLists.txt  tst_proxy.cpp
tests/auto/cpptest/q3dbars-series/: CMakeLists.txt  tst_series.cpp
tests/auto/cpptest/q3dcustom/: CMakeLists.txt  tst_custom.cpp
tests/auto/cpptest/q3dcustom-label/: CMakeLists.txt  tst_custom.cpp
tests/auto/cpptest/q3dcustom-volume/: CMakeLists.txt  tst_custom.cpp
tests/auto/cpptest/q3dinput/: CMakeLists.txt  tst_input.cpp
tests/auto/cpptest/q3dinput-touch/: CMakeLists.txt  tst_input.cpp
tests/auto/cpptest/q3dscatter/: CMakeLists.txt  tst_scatter.cpp
tests/auto/cpptest/q3dscatter-modelproxy/: CMakeLists.txt  tst_proxy.cpp
tests/auto/cpptest/q3dscatter-proxy/: CMakeLists.txt  tst_proxy.cpp
tests/auto/cpptest/q3dscatter-series/: CMakeLists.txt  tst_series.cpp
tests/auto/cpptest/q3dscene/: CMakeLists.txt  tst_scene.cpp
tests/auto/cpptest/q3dscene-camera/: CMakeLists.txt  tst_camera.cpp
tests/auto/cpptest/q3dscene-light/: CMakeLists.txt  tst_light.cpp
tests/auto/cpptest/q3dsurface-heightproxy/: CMakeLists.txt  tst_proxy.cpp
tests/auto/cpptest/q3dsurface-modelproxy-nan/: CMakeLists.txt  tst_proxy.cpp
tests/auto/qmltest/: BLACKLIST  CMakeLists.txt  qmltest.pro  qmltest.qrc  tst_qmltest.cpp
(+1622 files in other folders)
