if(TARGET Qt::Quick)
    add_subdirectory(qmlbars)
    add_subdirectory(qmlscatter)
    add_subdirectory(qmlsurface)
    add_subdirectory(qmlcustominput)
    add_subdirectory(qmllegend)
    add_subdirectory(qmlmultigraph)
    add_subdirectory(qml3doscilloscope)
    add_subdirectory(qmlsurfacelayers)
    add_subdirectory(qmlaxisformatter)
    add_subdirectory(qmlaxisdrag)
    add_subdirectory(qmlspectrogram)
endif()
if(NOT ANDROID AND NOT IOS AND NOT WINRT)
    add_subdirectory(bars)
    add_subdirectory(custominput)
    add_subdirectory(customproxy)
    add_subdirectory(itemmodel)
    add_subdirectory(scatter)
    add_subdirectory(surface)
    add_subdirectory(rotations)
    add_subdirectory(draggableaxes)
    add_subdirectory(customitems)
    add_subdirectory(texturesurface)
    add_subdirectory(volumetric)
endif()
